# AC_GBA_Emulator

./: .gitignore  CMakeLists.txt  README.md
dev/notes/:  GBPPU refinement.txt
include/headers/: audioHandler.h  game.h  games.h  gbAPU.h  gbBase.h  gbCPU.h  gbEmulator.h  gbMEM.h  gbPPU.h  gbcEmulator.h  gbcPPU.h  globals.h  inputData.h  timer.h
include/headers/gb/: gbAPU.h  gbCPU.h  gbEmulator.h  gbMEM.h  gbPPU.h
include/headers/gbc/: gbcEmulator.h  gbcPPU.h
include/headers/menu/: menu.h
res/: icon.rc  icon.res
src/: game.cpp  games.cpp  gbCPU.cpp  gbEmulator.cpp  gbMEM.cpp  gbPPU.cpp  gbcEmulator.cpp  gbcPPU.cpp  inputData.cpp  main.c  main.cpp  timer.cpp
src/gb/: gbCPU.cpp  gbEmulator.cpp  gbMEM.cpp  gbPPU.cpp
src/gbc/: gbcEmulator.cpp  gbcPPU.cpp
src/menu/: menu.cpp
